tests/should-fail/syntax/missing-local.j


function foo takes nothing returns integer
    integer i = 2
    return i*i
endfunction
